--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,8 +38,8 @@ a {
 /* Container */
 
 body, #container {
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	margin: 0;
 }
 
@@ -51,23 +51,51 @@ body, #container {
 /* Text Container */
 
 #text-container {
-	width: 50vw;
+	width: 50%;
+	height: calc(100vh - 1vh);
 	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: baseline;
+	padding-left: 25px;
+
+	border: 2px solid black;	/* Delete after! */
 }
 
 .title {
-	font-size: 5rem;
 	font-family: var(--alice);
 	color: purple;
-	justify-content: center;
-	align-items: center;
+}
+
+.name {
+	font-size: 4.3rem;
+	padding-right: calc(5vw);
+
+	/* padding-right: 25px; */
+}
+
+.traits {
+	font-size: 1.5rem;
+	padding-bottom: 0px;
+}
+
+#traits-container {
+	/* padding-right: calc(25vw); */
+
+	padding: inherit;
 }
 
 /* Image Container */
 
 #image-container {
-	width: 50vw;
+	width: 50%;
+	height: calc(100vh - 1vh);
 	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	border: 2px solid black;	/* Deleter after */
 }
 
 .pic {
@@ -82,5 +110,21 @@ body, #container {
 #prof {
 	width: 100%;
 	height: 100%;
-	object-fit: contain;
+	object-fit: cover;
+
+}
+
+footer {
+	margin-top: 30px;
+	width: 50%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
+
+.github {
+	width: 40px;
+	height: 40px;
+	overflow: hidden;
+	border-radius: 12% 54% 33% 96% / 72% 12% 98% 11%;
 }
