--- a/templates/base.html.eex
+++ b/templates/base.html.eex
@@ -7,7 +7,7 @@
     <%# <link rel="stylesheet" href="../assets/css/main.css"> %>
   </head>
   <body>
-    <%= include "nav" %>
+    <%# <%= include "nav" %1> %>
     <%= @contents %>
   </body>
 </html>
